--- a/Project_GuanZhi/App.xaml
+++ b/Project_GuanZhi/App.xaml
@@ -3,5 +3,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Project_GuanZhi">
-
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Light" Source="ms-appx:///Styles/Theme_Light.xaml"/>
+                <ResourceDictionary x:Key="Dark" Source="ms-appx:///Styles/Theme_Dark.xaml"/>
+            </ResourceDictionary.ThemeDictionaries>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Styles/Style_Fonts.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Styles/Style_Controls.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
